--- a/Sliding Window/Easy/src.ipynb
+++ b/Sliding Window/Easy/src.ipynb
@@ -4,21 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Problem Statement\n",
+    "#### Maximum Sum Subarray of Size K (easy)\n",
+    "Problem Statement: \n",
+    "```\n",
     "Given an array of positive numbers and a positive number ‘k,’ find the maximum sum of any contiguous subarray of size ‘k’.\n",
     "\n",
     "Example 1:\n",
     "```\n",
-    "Input: [2, 1, 5, 1, 3, 2], k=3 \n",
-    "Output: 9\n",
-    "Explanation: Subarray with maximum sum is [5, 1, 3].\n",
+    "    Input: [2, 1, 5, 1, 3, 2], k=3 \n",
+    "    Output: 9\n",
+    "    Explanation: Subarray with maximum sum is [5, 1, 3].\n",
     "```\n",
     "Example 2:\n",
     "\n",
     "```\n",
-    "Input: [2, 3, 4, 1, 5], k=2 \n",
-    "Output: 7\n",
-    "Explanation: Subarray with maximum sum is [3, 4]."
+    "    Input: [2, 3, 4, 1, 5], k=2 \n",
+    "    Output: 7\n",
+    "    Explanation: Subarray with maximum sum is [3, 4]."
    ]
   },
   {
@@ -84,7 +86,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Problem Statement#\n",
+    "#### Smallest Subarray With a Greater Sum (easy)\n",
+    "Problem Statement# \n",
     "\n",
     "    Given an array of positive integers and a number ‘S,’ find the length of the smallest contiguous subarray whose sum is greater than or equal to ‘S’. Return 0 if no such subarray exists.\n",
     "\n",
@@ -94,6 +97,69 @@
     "    Output: 2\n",
     "    Explanation: The smallest subarray with a sum greater than or equal to ‘7’ is [5, 2]."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def smallest_subarray_sum(s, arr):\n",
+    "    smallest = len(arr)\n",
+    "    start = 0\n",
+    "    end = 1\n",
+    "    win_sum = arr[0]\n",
+    "    while end < len(arr):\n",
+    "        if win_sum < s:\n",
+    "            win_sum = win_sum + arr[end]\n",
+    "            end+=1\n",
+    "        if(win_sum >= s):\n",
+    "            while(win_sum >= s):\n",
+    "                win_sum = win_sum - arr[start]\n",
+    "                start = start + 1\n",
+    "            smallest = min(smallest, end - start+1)\n",
+    "    return smallest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [2, 1, 5, 2, 8]\n",
+    "s = 7\n",
+    "smallest_subarray_sum(s,nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time Complexity#\n",
+    "* The time complexity of the above algorithm will be O(N)\n",
+    "\n",
+    "Space Complexity#\n",
+    "* The algorithm runs in constant space O(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
