--- a/Sliding Window/Easy/src.ipynb
+++ b/Sliding Window/Easy/src.ipynb
@@ -100,12 +100,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def smallest_subarray_sum(s, arr):\n",
-    "    smallest = len(arr)\n",
+    "    smallest = len(arr)+1\n",
     "    start = 0\n",
     "    end = 1\n",
     "    win_sum = arr[0]\n",
@@ -118,12 +118,12 @@
     "                win_sum = win_sum - arr[start]\n",
     "                start = start + 1\n",
     "            smallest = min(smallest, end - start+1)\n",
-    "    return smallest"
+    "    return smallest if smallest < len(arr) else 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,13 +153,6 @@
     "Space Complexity#\n",
     "* The algorithm runs in constant space O(1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
